...
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"

    >
    <item
        android:id="@+id/menu_filter"
        android:checkable="false"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="Item"
        android:visible="true"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/room_filter"
...
