...
    <string name="change_meeting_room">This meeting room is busy at this crenel, change meeting room</string>
    <string name="error">ERROR</string>
    <string name="mail_not_eddited">You have to edit eMails</string>
    <string name="subject_not_eddited">You have to edit Subject</string>
    <string name="meeting_room_not_eddited">Pick a meeting room</string>
    <string name="room_filter">Meeting rooms</string>
    <string name="date_filter">Chose a date</string>
    <string name="clear_filter">Clear filter</string>
    <string name="chose_a_date">Chose a date</string>
    <string name="chose_meeting_room">Chose meeting room</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date"> Date : </string>
    <string name="start"> ; Start : </string>
...
